day2-training/exercise/broken-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-store-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e-commerce
  template:
    metadata:
      labels:
        app: e-commerce
    spec:
      containers:
        - name: web
          image: busybox:latest
          # A mock app that crashes if DB_PASSWORD is not set
          command:
            - "/bin/sh"
            - "-c"
            - |
              if [ -z "$DB_PASSWORD" ]; then
                echo "FATAL: Database connection failed. DB_PASSWORD is missing!"
                exit 1
              fi
              echo "Connected to DB. Starting web server..."
              # Mocking a web server running forever
              tail -f /dev/null
